--- a/index.html
+++ b/index.html
@@ -45,8 +45,38 @@
             </div>
         </div>
     </header>
- 
+
+    <h1>We design tools to unveil your superpowers</h1>
+    <div class="feature-container">
+        <img src="images/pointer-icon.png" alt="icon with pointer">
+        <h2 class="feature-title"></h2>
+        <div class="click-test">
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling.</p>
+        </div>
+
+        <img src="images/design-icon.png" alt="icon with design">
+        <h2 class="feature-title"></h2>
+        <div class="design-survey">
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun.</p>
+        </div>
+
+        <img src="images/design-icon.png" alt="icon with design">
+        <h2 class="feature-title"></h2>
+        <div class="design-survey">
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun.</p>
+        </div>
+
+        <img src="images/design-icon.png" alt="icon with design">
+        <h2 class="feature-title"></h2>
+        <div class="design-survey">
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun.</p>
+        </div>
+        <button class="btn-sign">SIGN UP NOW</button>
+    </div>
+
 </body>
 </html>
-
-<!--Still strugglging to wrap my head around this assignment, spent most of the day on the header bit alone-->
