--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-           <div>
+           <div class="productly-header">
                 <h3 class="logo"><span><img src="images/tinylogo.png" alt="logo productly"></span>Productly</h3>
            </div>
            <div>
@@ -29,7 +29,6 @@
         </nav>
 
         <div class="header-container">
-            <div class="header-info">
                 <h1 class="main-title">The Design Thinking superpowers</h1>
                 <p class="main-info">
                     Tools, tutorials, design and innovation experts, all
@@ -42,40 +41,107 @@
                 <div class="header-img">
                     <img src="images/firstimage.png" alt="people-jumping">
                 </div>
-            </div>
         </div>
     </header>
 
-    <h1>We design tools to unveil your superpowers</h1>
+    <h1 class="feature-title">We design tools to unveil your superpowers</h1>
     <div class="feature-container">
-        <img src="images/pointer-icon.png" alt="icon with pointer">
+        <img class="feature-icon" src="images/pointer-icon.png" alt="icon with pointer">
         <h2 class="feature-title"></h2>
         <div class="click-test">
             <h3>First click tests</h3>
             <p>While most people enjoy casino gambling.</p>
         </div>
 
-        <img src="images/design-icon.png" alt="icon with design">
+        <img class="feature-icon" src="images/design-icon.png" alt="icon with design">
         <h2 class="feature-title"></h2>
         <div class="design-survey">
             <h3>Design surveys</h3>
             <p>Sports betting, lottery and bingo playing for the fun.</p>
         </div>
 
-        <img src="images/design-icon.png" alt="icon with design">
+        <img class="feature-icon" src="images/design-icon.png" alt="icon with design">
         <h2 class="feature-title"></h2>
         <div class="design-survey">
             <h3>Design surveys</h3>
             <p>Sports betting, lottery and bingo playing for the fun.</p>
         </div>
 
-        <img src="images/design-icon.png" alt="icon with design">
+        <img class="feature-icon" src="images/design-icon.png" alt="icon with design">
         <h2 class="feature-title"></h2>
         <div class="design-survey">
             <h3>Design surveys</h3>
             <p>Sports betting, lottery and bingo playing for the fun.</p>
         </div>
-        <button class="btn-sign">SIGN UP NOW</button>
+    </div>
+    <button class="btn-sign">SIGN UP NOW</button>
+
+    <div class="validation-container">
+        <div class="validation-text">
+            <p>Effortless Validation for</p>
+            <h1>Design Professionals</h1>
+            <p>The Myspace page defines the individual,
+                his or her characteristics, traits, 
+                personal choices and the overall personality
+                 of the person.</p>
+            <h4>Accesory makers</h4>
+            <p>While most people enjoy casino gambling, sports betting, 
+                lottery and bingo playing for the fun</p>
+            <h4>Alternationists</h4>
+            <p>If you are looking for a new way to promote your business
+                 that won’t cost you more money, </p>
+            <h4>Custom Design designers</h4>
+            <p>If you are looking for a new way to promote your business 
+                that won’t cost you more money, </p>
+        </div>
+        <div class="validation-img">
+            <img src="images/secondimage.png" alt="man texting">
+        </div>
+    </div>
+
+    <div class="marketers-container">
+        <div class="marketers-img">
+            <img src="images/fourthimage.png" alt="man pointing">
+        </div>
+        <div class="marketers-text">
+            <p>Effortless Validation for</p>
+            <h1>Design Professionals</h1>
+            <p>The Myspace page defines the individual,
+                his or her characteristics, traits, 
+                personal choices and the overall personality
+                 of the person.</p>
+            <h4>Accesory makers</h4>
+            <p>While most people enjoy casino gambling, sports betting, 
+                lottery and bingo playing for the fun</p>
+            <h4>Alternationists</h4>
+            <p>If you are looking for a new way to promote your business
+                 that won’t cost you more money, </p>
+            <h4>Custom Design designers</h4>
+            <p>If you are looking for a new way to promote your business 
+                that won’t cost you more money, </p>
+        </div>
+    </div>
+
+    <div class="production-container">
+        <div class="production-img">
+            <img src="images/thirdimage.png" alt="man on computer">
+        </div>
+        <div class="production-text">
+            <p>Easier decision making for</p>
+            <h1>Product Managers</h1>
+            <p>The Myspace page defines the individual, 
+                his or her characteristics, traits, personal 
+                choices and the overall personality of the person.</p>
+            <div class="icon-text1">
+                <img src="images/check icon.png" alt="check icon"><span>Never worry about overpaying for your energy again. </span>
+            </div>
+            <div class="icon-icon">
+                <img src="images/check icon.png">
+            </div>
+            <div class="icon-text">
+                <p>Never worry about overpaying for your energy again.</p>
+            </div>
+        </div>
     </div>
 
 </body>
