--- a/index.html
+++ b/index.html
@@ -144,5 +144,27 @@
         </div>
     </div>
 
+    <div class="footer">
+        <div class="footer-icon">
+            <img src="images/productlylogo.png" alt="prodoctly logotype">
+        </div>
+        <div class="footer-text1">
+            <p>About Us</p>
+            <p>Blog</p>
+            <p>Contact</p>
+            <p>FAQ</p>
+        </div>
+        <div class="footer-text2">
+            <p>Disclaimer</p>
+            <p>Financing</p>
+            <p>Privacy Policy</p>
+            <p>Terms of Service</p>
+        </div>
+        <div class="footer-btn">
+            <button class="white-btn"></button>
+            <button class="orange-btn">Sign up Now</button>
+        </div>
+    </div>
+
 </body>
 </html>
