--- a/index.html
+++ b/index.html
@@ -99,6 +99,28 @@
         </div>
     </div>
 
+    <div class="production-container">
+        <div class="production-img">
+            <img src="images/thirdimage.png" alt="man on computer">
+        </div>
+        <div class="production-text">
+            <p>Easier decision making for</p>
+            <h1>Product Managers</h1>
+            <p>The Myspace page defines the individual, 
+                his or her characteristics, traits, personal 
+                choices and the overall personality of the person.</p>
+            <div class="icon-text">
+                <img src="images/check icon.png" alt="check icon"><span>Never worry about overpaying for your energy again. </span>
+            </div>
+            <div class="icon-text">
+                <img src="images/check icon.png" alt="check icon"><span>We will only switch you to energy companies that we trust and will treat you right.</span>
+            </div>
+            <div class="icon-text">
+                <img src="images/check icon.png" alt="check icon"><span>We track the markets daily and know where the savings are.</span>
+            </div>
+        </div>
+    </div>
+
     <div class="marketers-container">
         <div class="marketers-img">
             <img src="images/fourthimage.png" alt="man pointing">
@@ -119,28 +141,6 @@
             <h4>Custom Design designers</h4>
             <p>If you are looking for a new way to promote your business 
                 that won’t cost you more money, </p>
-        </div>
-    </div>
-
-    <div class="production-container">
-        <div class="production-img">
-            <img src="images/thirdimage.png" alt="man on computer">
-        </div>
-        <div class="production-text">
-            <p>Easier decision making for</p>
-            <h1>Product Managers</h1>
-            <p>The Myspace page defines the individual, 
-                his or her characteristics, traits, personal 
-                choices and the overall personality of the person.</p>
-            <div class="icon-text1">
-                <img src="images/check icon.png" alt="check icon"><span>Never worry about overpaying for your energy again. </span>
-            </div>
-            <div class="icon-icon">
-                <img src="images/check icon.png">
-            </div>
-            <div class="icon-text">
-                <p>Never worry about overpaying for your energy again.</p>
-            </div>
         </div>
     </div>
 
